--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World, my name Lalo. My username is Lola because I don't want to give the creator of this website any of my personal information</h1>
+  <h1>Hello World, my name Lalo.</h1> 
+  <h1>My username is Lola because I don't want to give the creator of this website any of my personal information</h1>
 </body>
 </html>
