--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
   <h1>Hello World, my name Lalo.</h1> 
-  <h1>My username is Lola because I don't want to give the creator of this website any of my personal information</h1>
+  <h1>My username is Lola because I don't want to give the creator of this website any of my personal information.</h1>
 </body>
 </html>
