--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Ms Wood's Site</title>
+    <title>Lalo Esparza's Site</title>
     <meta name="description" content="Your Webpage Description">
-    <meta name="author" content="Joy Wood">
+    <meta name="author" content="Lalo Esparza">
 
     <!-- Enable responsive viewport -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -37,7 +37,7 @@
     <div class="navbar">
       <div class="navbar-inner">
         <div class="container-narrow">
-          <a class="brand" href="https://joywoodteaching.github.io/">Ms Wood's Site</a>
+          <a class="brand" href="https://joywoodteaching.github.io/">Lalo Esparza's Site</a>
         </div>
       </div>
     </div>
