--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <div class="span12">
     <p> Welcome to my webpage. My name is Lalo Esparza and I'm a student at <a> https://www.dsstpublicschools.org/college-view-high-school. </a> </p>
     <p> I fence, referee fencing, and run fencing tournaments. I am on my school's frisbee team, which got top eigth in the state. I have two dogs and two siblings. I don't like horror movies, but I like reading. </p>
-      <img src="http://www.steamgirlsvt.com/uploads/9/1/8/5/91858342/published/img-4744-l.jpeg?1526583168">
+      <img src="madeyoulook.jpg">
 <div class="page-header">
   <font color="orange"> <h2>My Projects  </font></h2>
 </div>
