--- a/Lalo'sSite.html
+++ b/Lalo'sSite.html
@@ -3,5 +3,6 @@
 <body>
 <h1> I don't know how to code a web page. </h1>
 <img src="madeyoulook.jpg">
+  <a herf="LolaHillatcollegeview.github.io"> You can get back to the home page by clicking this</a>
 </body> 
 </html>
