--- a/Lalo'sSite.html
+++ b/Lalo'sSite.html
@@ -3,6 +3,6 @@
 <body>
 <h1> I don't know how to code a web page. </h1>
 <a herf="LolaHillatcollegeview.github.io"> You can get back to the home page by clicking this</a>
-//<img src="madeyoulook.jpg">
+<!--img src="madeyoulook.jpg"-->
 </body> 
 </html>
