--- a/Lalo'sSite.html
+++ b/Lalo'sSite.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <h1> I don't know how to code a web page. </h1>
-<a herf="LolaHillatcollegeview.html"> You can get back to the home page by clicking this</a>
+<a> herf="LolaHillatcollegeview.html"> You can get back to the home page by clicking this </a>
 <!--img src="madeyoulook.jpg"-->
 </body> 
 </html>
