--- a/Lalo'sSite.html
+++ b/Lalo'sSite.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1> I don't know how to code a web page. </h1>
-<a herf="index.html">You can get back to the home page by clicking this </a>
+<a href="index.html">You can get back to the home page by clicking this </a>
 </body> 
 </html>
