--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 <div class="row-fluid">
   <div class="span12">
-    <p> Welcome to my webpage. My name is Lalo Esparza and I'm a student at <a class="brand" href="https://www.dsstpublicschools.org/college-view-high-school">DSST College View High School </a> </p>
+    <p> Welcome to my webpage. My name is Lalo Esparza and I'm a student at <a class="brand" href="https://www.dsstpublicschools.org/college-view-high-school">DSST College View High School. </a> </p>
     <p>  <a href="Lalo'sSite.html"> This is my second site</a>
     <p> I fence, referee fencing, and run fencing tournaments. I am on my school's frisbee team, which got top eigth in the state. I have two dogs and two siblings. I don't like horror movies, but I like reading. </p>
       <img src="madeyoulook.jpg">
@@ -64,9 +64,9 @@
 <p>Here are a few projects that I am proud of.</p>
 
 <ul>
-    <li><a href="http://www.steamgirlsvt.com/the-team.html">Steam Girls</a></li>
-    <li><a href="silkscreenprints.html">Silk Screen Prints</a></li>
-  <li><a href="processingproject.html">Processing Project</a></li>
+    <li><a Ping Pong </a></li>
+    <li><a Arduino Car </a></li>
+  <li><a Tinkerkad House </a></li>
 </ul>
 
 
