--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 
   </div>
 </div>
-<div class="page-header">
-  <font color="orange"> <h2>My Resume  </font></h2>
+<!--<div class="page-header">
+  <!--<font color="orange"> <h2>My Resume  </font></h2>
 </div>
 
 <p>Check out all my cool <a href="Teaching_Resume_Wood.pdf">qualifications</a>.</p>
