--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <p>Here are a few projects that I am proud of.</p>
 
 <ul>
-    <li><a Ping Pong </a></li>
+    <li> Ping Pong </li>
     <li><a Arduino Car </a></li>
   <li><a Tinkerkad House </a></li>
 </ul>
