--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 
 <ul>
     <li> Ping Pong </li>
-    <li><a Arduino Car </a></li>
-  <li><a Tinkerkad House </a></li>
+    <li> Arduino Car </li>
+  <li> Tinkerkad House </li>
 </ul>
 
 
