--- a/Lalo'sSite.html
+++ b/Lalo'sSite.html
@@ -1,8 +1,7 @@
 <!DOCTYPE>
 <html>
 <body>
-<h1> I don't know how to code a web page. </h1>
-<a href="index.html">You can get back to the home page by clicking this </a>
+<h1> You can get back by clicking <a href="index.html" this. </a> <h1>
   <img src="boohbah.jpg.jpeg">
 </body> 
 </html>
