--- a/Lalo'sSite.html
+++ b/Lalo'sSite.html
@@ -1,7 +1,8 @@
 <!DOCTYPE>
 <html>
 <body>
-<h1> You can get back by clicking <a href="index.html" this. </a> <h1>
+<h1> You can get back by clicking <a href="index.html" this. </a> </h1>
   <img src="boohbah.jpg.jpeg">
+  <h2> Click the image to get back. </h2>
 </body> 
 </html>
