--- a/Lalo'sSite.html
+++ b/Lalo'sSite.html
@@ -3,6 +3,6 @@
 <body>
 <h1> You can get back by clicking <a href="index.html" this. </a> </h1>
   <img src="boohbah.jpg.jpeg">
-  <h2> Click the image to get back. </h2>
+  <a> Click the image to get back. </a>
 </body> 
 </html>
