--- a/Lalo'sSite.html
+++ b/Lalo'sSite.html
@@ -1,8 +1,8 @@
 <!DOCTYPE>
 <html>
 <body>
-<h1> You can get back by clicking <a href="index.html" this. </a> </h1>
+<h1> <a href="index.html"> </a> </h1>
   <img src="boohbah.jpg.jpeg">
-  <a> Click the image to get back. </a>
+  <p> Click the image to get back. </p>
 </body> 
 </html>
