--- a/Lalo'sSite.html
+++ b/Lalo'sSite.html
@@ -1,7 +1,7 @@
 <!DOCTYPE>
+<p> This is my second wbsite </p>
 <html>
 <body>
-  <p> This is my second site </p>
 <h1> <a href="index.html"> </a> </h1>
   <img src="boohbah.jpg.jpeg">
   <p>Click the image to get back. </p>
