--- a/Lalo'sSite.html
+++ b/Lalo'sSite.html
@@ -1,8 +1,8 @@
 <!DOCTYPE>
 <html>
 <body>
-<h1> <a href="index.html"> </a> </h1>
-  <img src="boohbah.jpg.jpeg">
+<h1> <a href="index.html"> </a> 
+  <img src="boohbah.jpg.jpeg"> </h1>
   <p>Click the image to get back. </p>
 </body> 
 </html>
