--- a/Lalo'sSite.html
+++ b/Lalo'sSite.html
@@ -1,8 +1,7 @@
 <!DOCTYPE>
 <html>
 <body>
-<h1> <a href="index.html">  
-  <img src="boohbah.jpg.jpeg"> </a> </h1>
+<h1> <a href="index.html"> <img src="boohbah.jpg.jpeg"> </a> </h1>
   <p>Click the image to get back. </p>
 </body> 
 </html>
