--- a/Lalo'sSite.html
+++ b/Lalo'sSite.html
@@ -1,5 +1,8 @@
 <!DOCTYPE>
 <html>
+  <head>
+    <title> Lalo's Second Site </title>
+  </head>
 <body>
 <h1> <a href="index.html"> <img src="boohbah.jpg.jpeg"> </a> </h1>
   <p>Click the image to get back. </p>
