--- a/Lalo'sSite.html
+++ b/Lalo'sSite.html
@@ -2,7 +2,7 @@
 <html>
    <head>
     <meta charset="utf-8">
-    <title>Lalo Esparza's Site</title>
+    <title>Lalo Esparza's Second Site</title>
     <meta name="description" content="Your Webpage Description">
     <meta name="author" content="Lalo Esparza">
 
