--- a/LaloSite.html
+++ b/LaloSite.html
@@ -1,6 +1,6 @@
 <html>
 <body>
 <p> This is my thrid site. </p>
-  <h1 <a herf
+  <h1 <a herf="index.html"> <img src="asian.jpeg"> </a> </h1>
 </body>
 </html>
