--- a/LaloSite.html
+++ b/LaloSite.html
@@ -30,6 +30,6 @@
 <html>
 <body>
 <p> This is my thrid site. </p>
-  <h1 <a herf="index.html"> <img src="asian.jpeg"> </a> </h1>
+   <a herf="index.html"> <img src="asian.jpeg"> </a> 
 </body>
 </html>
