--- a/LaloSite.html
+++ b/LaloSite.html
@@ -1,7 +1,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Lalo Esparza's Site</title>
+    <title>Lalo's Second Site</title>
     <meta name="description" content="Your Webpage Description">
     <meta name="author" content="Lalo Esparza">
 
