--- a/LaloSite.html
+++ b/LaloSite.html
@@ -27,6 +27,20 @@
     <link href="https://kbroman.org/simple_sitenil" type="application/rss+xml" rel="alternate" title="Sitewide RSS Feed">
 
   </head>
+    <body>
+    <div class="navbar">
+      <div class="navbar-inner">
+        <div class="container-narrow">
+          <a class="brand" href="https://lolahillatcollegeview.github.io/index.html">Lalo Esparza's Site</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="container-narrow">
+
+      <div class="content">
+        
+
 <html>
 <body>
 <p> This is my thrid site. </p>
