--- a/LaloSite.html
+++ b/LaloSite.html
@@ -43,7 +43,7 @@
 
 <html>
 <body>
-<p> This is my thrid site. </p>
-   <a herf="index.html"> <img src="asian.jpeg"> </a> 
-</body>
+<h1> <a href="index.html"> <img src="boohbah.jpg.jpeg"> </a> </h1>
+  <p>Click the image to get back. </p>
+</body> 
 </html>
