--- a/LaloSite.html
+++ b/LaloSite.html
@@ -44,6 +44,6 @@
 <html>
 <body>
 <h1> <a href="index.html"> <img src="boohbah.jpg.jpeg"> </a> </h1>
-  <p>Click the image to get back. </p>
+  <p>This is my third site. </p>
 </body> 
 </html>
