--- a/Lalo'sSite.html
+++ b/Lalo'sSite.html
@@ -32,7 +32,7 @@
     <div class="navbar">
       <div class="navbar-inner">
         <div class="container-narrow">
-          <a class="brand" href="https://lolahillatcollegeview.github.io/index.html">Lalo Esparza's Site</a>
+          <a class="brand" href="https://lolahillatcollegeview.github.io/index.html">Lalo Esparza's Second Site</a>
         </div>
       </div>
     </div>
