--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         
 
 <div class="page-header">
-  <font color="orange"> <h2>Lalo's Site</font></h2>
+  <font color="purple"> <h2>Lalo's Site</font></h2>
 </div>
 
 <div class="row-fluid">
@@ -59,7 +59,7 @@
     <p> I fence, referee fencing, and run fencing tournaments. I am on my school's frisbee team, which got top eigth in the state. I have two dogs and two siblings. I don't like horror movies, but I like reading. </p>
       <img src="madeyoulook.jpg">
 <div class="page-header">
-  <font color="orange"> <h2>My Projects  </font></h2>
+  <font color="green"> <h2>My Projects  </font></h2>
 </div>
 
 <p>Here are a few projects that I am proud of.</p>
