--- a/Lalo'sSite.html
+++ b/Lalo'sSite.html
@@ -44,6 +44,7 @@
 
 <html>
 <body>
+   <font color="red"</font>
 <h1> <a href="index.html"> <img src="boohbah.jpg.jpeg"> </a> </h1>
   <p>Click the image to get back. </p>
 </body> 
