--- a/LaloSite.html
+++ b/LaloSite.html
@@ -31,7 +31,7 @@
     <div class="navbar">
       <div class="navbar-inner">
         <div class="container-narrow">
-          <a class="brand" href="https://lolahillatcollegeview.github.io/index.html">Lalo Esparza's Third Site</a>
+          <a class="brand" href="https://lolahillatcollegeview.github.io/index.html">Lalo's Third Site</a>
         </div>
       </div>
     </div>
