--- a/summative.html
+++ b/summative.html
@@ -44,9 +44,10 @@
 
 <html>
 <body>
+  .large { font-size: 130% }
    <font color="red"</font>
 <h1> <a href="index.html"> <img src="boohbah.jpg.jpeg"> </a> </h1>
-  <p>Click the image to get back to the main page. </p>
+  large.[Click the image to get back to the main page.]
 </body> 
 </html>
 
