--- a/summative.html
+++ b/summative.html
@@ -43,11 +43,11 @@
         
 
 <html>
-  .large { font-size: 130% }
 <body>
+  <font color="yellow" <h This is my summative. </h></font>
    <font color="red"</font>
-<h1> <a href="index.html"> <img src="boohbah.jpg.jpeg"> </a> </h1>
-  large.[Click the image to get back to the main page.]
+ <a href="index.html"> <img src="boohbah.jpg.jpeg"> </a> 
+  <p> This is my summative page. </p>
 </body> 
 </html>
 
