--- a/summative.html
+++ b/summative.html
@@ -44,7 +44,8 @@
 
 <html>
 <body>
-  <font color="yellow" <h This is my summative. </h></font>
+  <font color="yellow"</font>
+  <h2>This is my summative."</h2>
    <font color="red"</font>
  <a href="index.html"> <img src="boohbah.jpg.jpeg"> </a> 
   <p> This is my summative page. </p>
