--- a/summative.html
+++ b/summative.html
@@ -45,7 +45,7 @@
 <html>
 <body>
   <font color="yellow"</font>
-  <h2> <p This is my summative. </p> </h2>
+  <h2>  This is my summative. </h2>
    <font color="red"</font>
  <a href="index.html"> <img src="boohbah.jpg.jpeg"> </a> 
   <p> This is my summative page. </p>
