--- a/summative.html
+++ b/summative.html
@@ -47,7 +47,7 @@
   <font color="yellow"</font>
   <h2> <p This is my summative. </p> </h2>
    <font color="red"</font>
- <a href="index.html"> <img src="boohbah.jpg.jpeg"> </a> 
+ <a href="index.html"> <img src="asian.jpeg"> </a> 
   <p> This is my summative page. </p>
 </body> 
 </html>
