--- a/LaloSite.html
+++ b/LaloSite.html
@@ -43,7 +43,7 @@
 
 <html>
 <body>
-<h1> <a href="index.html"> <img src="boohbah.jpg.jpeg"> </a> </h1>
+<h1> <a href="index.html"> <img src="Earth.jpg.jpeg"> </a> </h1>
   <p>This is my third site. </p>
 </body> 
 </html>
