--- a/summative.html
+++ b/summative.html
@@ -44,9 +44,15 @@
 
 <html>
 <body>
+  <font color="red"</font>
+  <h2> T </h2>
+  <font color="orange"</font>
+  <h2> h </h2>
   <font color="yellow"</font>
-  <h2> This is my summative. </h2>
-   <font color="red"</font>
+  <h2> i </h2>
+  <font color="green"</font>
+  <h2> s </h2>
+   <font color="brown"</font>
  <a href="index.html"> <img src="snow.jpg"> </a> 
   <p> This is my summative page. </p>
 </body> 
