--- a/summative.html
+++ b/summative.html
@@ -49,8 +49,12 @@
   <font color="orange"</font>
   h 
   <font color="yellow"</font>
-   i 
+  i 
   <font color="green"</font>
+  s </h2>
+  <font color="blue"</font>
+  <h2> i
+    <font color="violet"</font>
     s </h2>
    <font color="brown"</font>
  <a href="index.html"> <img src="snow.jpg"> </a> 
