--- a/summative.html
+++ b/summative.html
@@ -56,6 +56,28 @@
   <h2> i
     <font color="violet"</font>
     s </h2>
+  <font color="red"</font>
+  <h2 m
+      <font color="orange"</font> 
+  y </h2>
+        <font color="yellow"</font>
+        <h2 s
+            <font color="green"</font>
+      u
+      <font color="blue"</font>
+      m
+      <font color="violet"</font>
+      m
+      <font color="red"</font>
+      a
+      <font color="orange"</font>
+      t
+      <font color="yellow"</font>
+      i
+      <font color="green"</font>
+      v
+      <font color="blue"</font>
+      e </h2>
    <font color="brown"</font>
  <a href="index.html"> <img src="snow.jpg"> </a> 
   <p> This is my summative page. </p>
