--- a/summative.html
+++ b/summative.html
@@ -80,7 +80,7 @@
       e </h2>
    <font color="brown"</font>
  <a href="index.html"> <img src="snow.jpg"> </a> 
-  <p> This is my summative page. </p>
+  <h3> This is my summative page. </h3>
 </body> 
 </html>
 
